[gd_scene load_steps=8 format=3 uid="uid://chgfjwnrr5lj4"]

[ext_resource type="Script" uid="uid://dp638j1wocuti" path="res://enemies/boss/boss.gd" id="1_ubujh"]
[ext_resource type="Texture2D" uid="uid://b0ngrfll618oe" path="res://enemies/boss/boss.png" id="2_8d0e3"]
[ext_resource type="PackedScene" uid="uid://dv620i700bxfe" path="res://enemies/beam_enemy/beam_pod.tscn" id="3_r4ron"]
[ext_resource type="AudioStream" uid="uid://dywm04v350a4b" path="res://external_assets/sketcherskt/laserpew.ogg" id="4_8d0e3"]
[ext_resource type="PackedScene" uid="uid://xfkwh310tgd2" path="res://shared/hit_explosions.tscn" id="5_vsebo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_auiwu"]
radius = 280.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vsebo"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("4_8d0e3")

[node name="Boss" type="Area2D" node_paths=PackedStringArray("beam_pods")]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_ubujh")
shots_in_burst = 6
shot_cooldown = 0.3
beam_pods = [NodePath("BeamPod"), NodePath("BeamPod2"), NodePath("BeamPod3")]
health = 3000.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8d0e3")

[node name="BeamPod" parent="." instance=ExtResource("3_r4ron")]
position = Vector2(34, 130)

[node name="BeamPod2" parent="." instance=ExtResource("3_r4ron")]
position = Vector2(35, -135)

[node name="BeamPod3" parent="." instance=ExtResource("3_r4ron")]
position = Vector2(35, 0)

[node name="BottomShotMarker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-201, 172)

[node name="TopShotMarker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-201, -179)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_auiwu")

[node name="BurstTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_vsebo")
pitch_scale = 2.0
max_polyphony = 3

[node name="Explosions" parent="." instance=ExtResource("5_vsebo")]
unique_name_in_owner = true

[connection signal="timeout" from="BurstTimer" to="." method="_on_burst_timer_timeout"]
